objects/Feed_Item_Contact__c.object
<CustomObject>
    <description>This object would hold the details of feed item with Contact</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This holds the case ID</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feed Item Contacts</relationshipLabel>
        <relationshipName>Feed_Item_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feed Item Contacts</relationshipLabel>
        <relationshipName>Feed_Item_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feed_Item_ID__c</fullName>
        <label>Feed Item ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Feed Item Contact</label>
    <nameField>
        <displayFormat>FIC-{0000000}</displayFormat>
        <label>Feed Item Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feed Item Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>